<resources>
    <string name="app_name">SharedPreferences</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>

    <string name="ingresa_un_n_mero_decimal">Ingresa un número decimal</string>
    <string name="ingresa_un_texto">Ingresa un texto</string>
    <string name="almacenado">Almacenado</string>
    <string name="seleccionado">Seleccionado</string>
    <string name="ingresa_un_numero">Ingresa un numero</string>
</resources>